--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/stevchen99/PisConsNode2/issues"
   },
-  "homepage": "https://github.com/stevchen99/PisConsNode2#readme"
+  "homepage": "https://github.com/stevchen99/PisConsNode2#readme",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.6.5"
+  }
 }
